# capybara

./: .gitignore  Cargo.toml  index.html  styles.in.css  tailwind.config.js
capybara-lemmy-client/: Cargo.toml
capybara-lemmy-client/src/: comment.rs  community.rs  error.rs  instance.rs  language.rs  lib.rs  local_user.rs  person.rs  post.rs  sensitive.rs  site.rs
src/: app.rs  community.rs  community_list.rs  login.rs  main.rs  settings.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: comments.rs  community.rs  markdown.rs  mod.rs  numbers.rs  person.rs  post.rs  post_view_controls.rs  posts.rs  profile.rs  reply_box.rs  save_button.rs  show_more.rs  sorting_components.rs  subscribe.rs  time.rs  voter.rs
src/components/feed/: mod.rs  post_preview.rs  virtual_scroll.rs
