[package]
name = "capybara-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.4", features = ["csr", "nightly"] }
leptos_router = { version = "0.4", features = ["csr", "nightly"] }
leptos_meta = { version = "0.4", features = ["csr", "nightly"] }
leptos-use = { version = "0.4"}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
capybara-lemmy-client = {path = "./capybara-lemmy-client"}
log = "0.4.17"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
reqwest = "0.11.15"
web-sys = {version = "0.3", features = ["History", "Window", "HtmlMediaElement"]}
chrono = "0.4.24"
comrak = { version = "0.18.0", default-features = false }
leptos_icons = {git = "https://github.com/Carlosted/leptos-icons.git", features = ["BiCommentDetailRegular", "BiUpvoteRegular", "BiUpvoteSolid", "BiDownvoteRegular", "BiDownvoteSolid", "BiSortDownRegular", "BiLogOutRegular", "BsShareFill"]}
gloo = {version = "0.8.0", features = ["storage"]}

# leptos-use is on leptos main
# [patch.crates-io]
# leptos = { git = "https://github.com/leptos-rs/leptos.git" }
# leptos_router = { git = "https://github.com/leptos-rs/leptos.git" }
# leptos_meta = { git = "https://github.com/leptos-rs/leptos.git" }

[workspace]
members = ["src-tauri", "capybara-lemmy-client"]
