[package]
name = "capybara-lemmy-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.158"
serde_json = "1"
serde_qs = "0.12.0"
# reqwest = {path ="../../reqwest", features = ["json"]}
gloo-net = {version ="0.3", features = ["json"]}
serde_with = "2.3.1"
url = {version = "2.3.1", features = ["serde"]}
chrono = {version = "0.4.24", features = ["serde"]}
strum = {version = "0.25", features = ["derive"]}
thiserror = "1.0.40"
log = "0.4.17"
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dev-dependencies]
tokio = {version = "1", features = ["full"]}